# kaful-data-twin

./: .gitignore  LICENSE  README.md  TRANSFER-FINDINGS.md  baseline.csv  pyproject.toml  render.yaml
api/: __init__.py  app.py
api/static/: index.html
auth/: __init__.py  passwords.py  ratelimit.py  sessions.py
bench/: after.csv
datasets/: __init__.py  phm.py
deploy/: kaful.db
domain/: __init__.py  models.py  stores.py
evaluation/: __init__.py  metrics.py
features/: __init__.py  extractor.py
ingest/: __init__.py  codec.py  handler.py  replay.py
scripts/: build_twin.py  calibrate.py  diagnose_transfer.py  export_demo_db.py  fit_observation.py  fit_wear.py  inspect_features.py  load_labels.py  loadtest.py  replay_http.py  run_filter.py  run_replay.py  seed_postgres.py  serve.py  validate.py
storage/: __init__.py  config.py  filesystem_object_store.py  postgres_data_store.py  s3_object_store.py  sqlite_data_store.py
tests/: test_api.py  test_auth.py  test_build.py  test_data_store.py  test_degradation.py  test_features.py  test_filter.py  test_ingest.py  test_ingest_scale.py  test_lifecycle.py  test_metrics.py  test_object_store.py  test_observation.py  test_postgres_store.py  test_rul.py  test_s3_object_store.py  test_security.py  test_wear_labels.py
twin/: __init__.py  base.py  build.py  cloud.py  degradation.py  filter.py  lifecycle.py  observation.py  particle_twin.py  rul.py  stub.py
