[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kaful-data-twin"
version = "0.1.0"
description = "Data-first streaming remaining-useful-life digital twin for CNC machines"
requires-python = ">=3.11,<3.13"
dependencies = ["numpy>=1.24", "scipy>=1.11", "fastapi>=0.110", "uvicorn>=0.29"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["domain*", "storage*", "features*", "datasets*", "ingest*", "twin*", "evaluation*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
