[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kaful-data-twin"
version = "0.1.0"
description = "Data-first streaming remaining-useful-life digital twin for CNC machines"
requires-python = ">=3.11,<3.13"
dependencies = ["numpy>=1.24", "scipy>=1.11", "fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9", "bcrypt>=4.1"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "boto3>=1.34", "moto>=5"]
s3 = ["boto3>=1.34"]
postgres = ["psycopg[binary]>=3.1"]

[tool.setuptools.packages.find]
include = ["domain*", "storage*", "features*", "datasets*", "ingest*", "twin*", "evaluation*", "api*", "auth*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
